--- a/experience.html
+++ b/experience.html
@@ -42,8 +42,9 @@
         <section>
             <h1 class="section-title" data-lang-en="Experience" data-lang-tr="Deneyim">Experience</h1>
             <div style="max-width:800px;margin:auto;">
+                <h2 class="section-title" style="font-size:1.5rem;margin-bottom:1rem;" data-lang-en="Professional Experience" data-lang-tr="Profesyonel Deneyim">Professional Experience</h2>
                 <div class="experience-card mb-4">
-                    <h2 data-lang-en="Jr. System Administrator" data-lang-tr="Jr. Sistem Yöneticisi">Jr. System Administrator</h2>
+                    <h3 data-lang-en="Jr. System Administrator" data-lang-tr="Jr. Sistem Yöneticisi">Jr. System Administrator</h3>
                     <span class="company">Tetra HGS Elektronik Sistemleri A.Ş.</span> <span class="duration">Jan 2025 - Present, Ankara</span>
                     <p data-lang-en="Managing systems and services, virtualization platforms, monitoring tools, and Active Directory at Türkiye's largest HGS company." data-lang-tr="Türkiye'nin en büyük HGS şirketinde sistem ve hizmet yönetimi, sanallaştırma platformları, izleme araçları ve Active Directory yönetimi.">Managing systems and services, virtualization platforms, monitoring tools, and Active Directory at Türkiye's largest HGS company.</p>
                     <ul>
@@ -62,7 +63,7 @@
                     </ul>
                 </div>
                 <div class="experience-card mb-4">
-                    <h2 data-lang-en="Intern System Administrator" data-lang-tr="Stajyer Sistem Yöneticisi">Intern System Administrator</h2>
+                    <h3 data-lang-en="Intern System Administrator" data-lang-tr="Stajyer Sistem Yöneticisi">Intern System Administrator</h3>
                     <span class="company">Tetra HGS Elektronik Sistemleri A.Ş.</span> <span class="duration">Jan 2024 - Dec 2024, Ankara</span>
                     <p data-lang-en="Started learning OS and service management, virtualization, monitoring, and Active Directory." data-lang-tr="İşletim sistemi ve hizmet yönetimi, sanallaştırma, izleme ve Active Directory konularında öğrenmeye başlandı.">Started learning OS and service management, virtualization, monitoring, and Active Directory.</p>
                     <ul>
@@ -71,6 +72,23 @@
                         <li>Monitoring System Management (Nagios XI)</li>
                         <li>Managing Active Directory, (creating and closing user accounts, GP0, implementing PowerShell scripts to automate processes)</li>
                     </ul>
+                </div>
+                
+                <h2 class="section-title" style="font-size:1.5rem;margin:2rem 0 1rem;" data-lang-en="Volunteer Work" data-lang-tr="Gönüllü Çalışmalar">Volunteer Work</h2>
+                <div class="experience-card mb-4">
+                    <h3 data-lang-en="IEEE UTAA Vice Chair" data-lang-tr="IEEE UTAA Başkan Yardımcısı">IEEE UTAA Vice Chair</h3>
+                    <span class="company">IEEE</span> <span class="duration">2023 - Present</span>
+                    <p data-lang-en="Leading IEEE activities and promoting technology innovation at Turkish Aeronautical Association University." data-lang-tr="Türk Hava Kurumu Üniversitesi'nde IEEE faaliyetlerini yönetme ve teknoloji inovasyonunu teşvik etme.">Leading IEEE activities and promoting technology innovation at Turkish Aeronautical Association University.</p>
+                </div>
+                <div class="experience-card mb-4">
+                    <h3 data-lang-en="IEEE Robotics and Automation Society Chair" data-lang-tr="IEEE Robotik ve Otomasyon Topluluğu Başkanı">IEEE Robotics and Automation Society Chair</h3>
+                    <span class="company">IEEE</span> <span class="duration">2023 - Present</span>
+                    <p data-lang-en="Leading robotics and automation projects, organizing workshops and events for students." data-lang-tr="Robotik ve otomasyon projelerine liderlik etme, öğrenciler için atölye çalışmaları ve etkinlikler düzenleme.">Leading robotics and automation projects, organizing workshops and events for students.</p>
+                </div>
+                <div class="experience-card mb-4">
+                    <h3 data-lang-en="MAKERLAB UTAA Hardware Team Co-Leader" data-lang-tr="MAKERLAB UTAA Donanım Takımı Eş Lideri">MAKERLAB UTAA Hardware Team Co-Leader</h3>
+                    <span class="company">MAKERLAB</span> <span class="duration">2023 - Present</span>
+                    <p data-lang-en="Co-leading hardware development projects and mentoring students in electronics and prototyping." data-lang-tr="Donanım geliştirme projelerine eş liderlik etme ve öğrencilere elektronik ve prototipleme konularında mentorluk yapma.">Co-leading hardware development projects and mentoring students in electronics and prototyping.</p>
                 </div>
             </div>
         </section>
