--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                 </div>
                 <div class="experience-card">
                     <div class="experience-header">
-                        <h3 data-lang-en="IEEE UTAA Vice Chair" data-lang-tr="IEEE UTAA Başkan Yardımcısı">IEEE UTAA Vice Chair</h3>
-                        <span class="company">IEEE</span>
-                        <span class="duration">2023 - Present</span>
+                        <h3 data-lang-en="Intern System Administrator" data-lang-tr="Stajyer Sistem Yöneticisi">Intern System Administrator</h3>
+                        <span class="company">Tetra HGS</span>
+                        <span class="duration">Jan 2024 - Dec 2024</span>
                     </div>
-                    <p data-lang-en="Leading IEEE activities and promoting technology innovation at Turkish Aeronautical Association University." data-lang-tr="Türk Hava Kurumu Üniversitesi'nde IEEE faaliyetlerini yönetme ve teknoloji inovasyonunu teşvik etme.">Leading IEEE activities and promoting technology innovation at Turkish Aeronautical Association University.</p>
+                    <p data-lang-en="Started learning OS and service management, virtualization, monitoring, and Active Directory." data-lang-tr="İşletim sistemi ve hizmet yönetimi, sanallaştırma, izleme ve Active Directory konularında öğrenmeye başlandı.">Started learning OS and service management, virtualization, monitoring, and Active Directory.</p>
                 </div>
             </div>
             <div class="text-center">
