--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,13 @@
         <section>
             <h1 class="section-title" data-lang-en="Contact" data-lang-tr="İletişim">Contact</h1>
             <div style="max-width:500px;margin:auto;">
+                <div class="contact-unavailable blog-post" style="text-align:center;">
+                    <p data-lang-en="Sorry, the contact form is temporarily unavailable. Please check back later or reach out via social media links below."
+                       data-lang-tr="Üzgünüz, iletişim formu geçici olarak kullanıma kapalı. Lütfen daha sonra tekrar deneyin veya aşağıdaki sosyal medya bağlantılarından ulaşın.">
+                       Sorry, the contact form is temporarily unavailable. Please check back later or reach out via social media links below.
+                    </p>
+                </div>
+                <!--
                 <form id="contact-form" style="background:white;padding:2rem;border-radius:1rem;box-shadow:0 2px 16px rgba(44,90,160,0.07);">
                     <div class="mb-3">
                         <label for="name" data-lang-en="Name" data-lang-tr="Ad Soyad">Name</label>
@@ -57,6 +64,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary" data-lang-en="Send" data-lang-tr="Gönder">Send</button>
                 </form>
+                -->
             </div>
         </section>
     </main>
