--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <section>
             <h1 class="section-title" data-lang-en="Contact" data-lang-tr="İletişim">Contact</h1>
             <div style="max-width:500px;margin:auto;">
-                <div class="contact-unavailable blog-post" style="text-align:center;">
+                <div class="contact-unavailable blog-post static-card" style="text-align:center;">
                     <p data-lang-en="Sorry, the contact form is temporarily unavailable. Please check back later or reach out via social media links below."
                        data-lang-tr="Üzgünüz, iletişim formu geçici olarak kullanıma kapalı. Lütfen daha sonra tekrar deneyin veya aşağıdaki sosyal medya bağlantılarından ulaşın.">
                        Sorry, the contact form is temporarily unavailable. Please check back later or reach out via social media links below.
