--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <main class="container" style="padding-top:100px;">
         <section>
             <h1 class="section-title" data-lang-en="About Me" data-lang-tr="Hakkımda">About Me</h1>
-            <div class="blog-post static-card fade-in-up" style="max-width:800px;margin:auto;">
+            <div class="blog-post" style="max-width:800px;margin:auto;">
                 <p data-lang-en="As a Computer Engineering student with a passion for innovation, I specialize in developing reliable systems and implementing creative solutions. Currently, I am working as a System Administrator at Türkiye's largest HGS company, where I have gained extensive experience in systems and service management, virtualization platforms, monitoring tools and managing Active Directory."
                    data-lang-tr="Yeniliğe tutkulu bir Bilgisayar Mühendisliği öğrencisi olarak, güvenilir sistemler geliştirme ve yaratıcı çözümler uygulama konusunda uzmanlaştım. Şu anda Türkiye'nin en büyük HGS şirketinde Sistem Yöneticisi olarak çalışıyor, sistem ve hizmet yönetimi, sanallaştırma platformları, izleme araçları ve Active Directory yönetimi konularında kapsamlı deneyim kazanıyorum.">
                     As a Computer Engineering student with a passion for innovation, I specialize in developing reliable systems and implementing creative solutions. Currently, I am working as a System Administrator at Türkiye's largest HGS company, where I have gained extensive experience in systems and service management, virtualization platforms, monitoring tools and managing Active Directory.
