--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="/">GC</a>
+                <a href="/">
+                    <img src="photos/logo_big.png" alt="Logo" class="nav-logo-img" />
+                </a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
