--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="/">
-                    <img src="photos/logo_big.png" alt="Logo" class="nav-logo-img" />
-                </a>
+                <a href="/">GC</a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
