üst logoyu kaldırdım tekrar, sayfalar arası yazıyla uğraşıyorum4

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
                 <a href="/">GC</a>
             </div>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="/" class="nav-link active" data-lang-en="Home" data-lang-tr="Ana Sayfa">Home</a></li>
+                <li class="nav-item"><a href="/" class="nav-link" data-lang-en="Home" data-lang-tr="Ana Sayfa">Home</a></li>
                 <li class="nav-item"><a href="/about" class="nav-link" data-lang-en="About" data-lang-tr="Hakkında">About</a></li>
                 <li class="nav-item"><a href="/experience" class="nav-link" data-lang-en="Experience" data-lang-tr="Deneyim">Experience</a></li>
                 <li class="nav-item"><a href="/projects" class="nav-link" data-lang-en="Projects" data-lang-tr="Projeler">Projects</a></li>
