--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-card">
-                        <div class="profile-avatar">
-                            <i class="fas fa-user-circle"></i>
+                        <div class="profile-avatar" style="text-align:center;margin-bottom:var(--spacing-xl);">
+                            <img src="photos/profil.jpg" alt="Profil Fotoğrafı" style="width:120px;height:120px;border-radius:50%;object-fit:cover;box-shadow:0 2px 16px rgba(44,90,160,0.13);border:3px solid #e9ecef;" />
                         </div>
                         <div class="profile-info">
                             <h3 data-lang-en="Current Position" data-lang-tr="Mevcut Pozisyon">Current Position</h3>
