--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     <i class="fas fa-globe"></i>
                     <span id="lang-text">EN</span>
                 </button>
+                <button id="theme-toggle" class="language-toggle" style="margin-left:8px;" title="Tema Değiştir">
+                    <i id="theme-icon" class="fas fa-moon"></i>
+                </button>
                 <div class="hamburger">
                     <span class="bar"></span>
                     <span class="bar"></span>
