--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <i class="fas fa-globe"></i>
                     <span id="lang-text">EN</span>
                 </button>
-                <button id="theme-toggle" class="language-toggle" style="margin-left:8px;" title="Tema Değiştir">
+                <button id="theme-toggle" class="language-toggle" style="margin-left:8px;" title="Tema Değiştir" onclick="toggleTheme()">
                     <i id="theme-icon" class="fas fa-moon"></i>
                 </button>
                 <div class="hamburger">
