maddelerdeki hatalar için değişiklik

--- a/blog-post.html
+++ b/blog-post.html
@@ -69,9 +69,9 @@
                 <div class="footer-section">
                     <h4 data-lang-en="Connect" data-lang-tr="Bağlantı">Connect</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link"><i class="fas fa-envelope"></i></a>
+                        <a href="https://linkedin.com/in/gokberk-ceviker/" class="social-link" target="_blank" rel="noopener" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Mrcev" class="social-link" target="_blank" rel="noopener" title="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="mailto:gokberkceviker@ieee.org" class="social-link" title="E-mail"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
