--- a/experience.html
+++ b/experience.html
@@ -80,17 +80,17 @@
                 <h2 class="section-title" style="font-size:1.5rem;margin:2rem 0 1rem;" data-lang-en="Volunteer Work" data-lang-tr="Gönüllü Çalışmalar">Volunteer Work</h2>
                 <div class="experience-card mb-4">
                     <h3 data-lang-en="IEEE UTAA Vice Chair" data-lang-tr="IEEE UTAA Başkan Yardımcısı">IEEE UTAA Vice Chair</h3>
-                    <span class="company">IEEE</span> <span class="duration">2023 - Present</span>
+                    <span class="company">IEEE</span> <span class="duration">2025 - Present</span>
                     <p data-lang-en="Leading IEEE activities and promoting technology innovation at Turkish Aeronautical Association University." data-lang-tr="Türk Hava Kurumu Üniversitesi'nde IEEE faaliyetlerini yönetme ve teknoloji inovasyonunu teşvik etme.">Leading IEEE activities and promoting technology innovation at Turkish Aeronautical Association University.</p>
                 </div>
                 <div class="experience-card mb-4">
                     <h3 data-lang-en="IEEE Robotics and Automation Society Chair" data-lang-tr="IEEE Robotik ve Otomasyon Topluluğu Başkanı">IEEE Robotics and Automation Society Chair</h3>
-                    <span class="company">IEEE</span> <span class="duration">2023 - Present</span>
+                    <span class="company">IEEE</span> <span class="duration">2024 - 2025</span>
                     <p data-lang-en="Leading robotics and automation projects, organizing workshops and events for students." data-lang-tr="Robotik ve otomasyon projelerine liderlik etme, öğrenciler için atölye çalışmaları ve etkinlikler düzenleme.">Leading robotics and automation projects, organizing workshops and events for students.</p>
                 </div>
                 <div class="experience-card mb-4">
                     <h3 data-lang-en="MAKERLAB UTAA Hardware Team Co-Leader" data-lang-tr="MAKERLAB UTAA Donanım Takımı Eş Lideri">MAKERLAB UTAA Hardware Team Co-Leader</h3>
-                    <span class="company">MAKERLAB</span> <span class="duration">2023 - Present</span>
+                    <span class="company">MAKERLAB</span> <span class="duration">2025 - Present</span>
                     <p data-lang-en="Co-leading hardware development projects and mentoring students in electronics and prototyping." data-lang-tr="Donanım geliştirme projelerine eş liderlik etme ve öğrencilere elektronik ve prototipleme konularında mentorluk yapma.">Co-leading hardware development projects and mentoring students in electronics and prototyping.</p>
                 </div>
             </div>
@@ -115,9 +115,9 @@
                 <div class="footer-section">
                     <h4 data-lang-en="Connect" data-lang-tr="Bağlantı">Connect</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link"><i class="fas fa-envelope"></i></a>
+                        <a href="https://linkedin.com/in/gokberk-ceviker/" class="social-link" target="_blank" rel="noopener" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Mrcev" class="social-link" target="_blank" rel="noopener" title="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="mailto:gokberkceviker@ieee.org" class="social-link" title="E-mail"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
