--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,7 @@
                        data-lang-tr="Sistem yönetimi, ağ ve otomasyon konularında pratik becerileri geliştirmek için devam eden kişisel proje. Farklı sunucu ve ağ servislerini düzenli olarak kurup test ettiğim dinamik bir ev laboratuvarı ortamı yönetiyorum. Laboratuvar, yeni sanal sunucular, işletim sistemleri ve araçlar ekledikçe sürekli gelişiyor. Bu uygulamalı pratik, teknik bilgimi derinleştirmeme ve yeni teknolojileri takip etmeme yardımcı oluyor.">
                         Ongoing personal project to enhance practical skills in system administration, networking, and automation. I maintain a dynamic home lab environment where I regularly deploy, configure, and test various servers and network services. The lab is continuously evolving as I add new virtual servers, operating systems, and tools to simulate real-world IT infrastructure and scenarios. This hands-on practice helps me deepen my technical knowledge and stay current with emerging technologies.
                     </p>
+                    <h3 style="margin-top: 1.5rem; margin-bottom: 0.5rem; font-weight: 600; color: var(--primary-color);">Key Features</h3>
                     <ul>
                         <li>Virtualization: Proxmox VE, VMware ESXI</li>
                         <li>Operating Systems: Windows Server, Ubuntu Server, Debian, CentOS Stream, RHEL, MacOS</li>
@@ -63,10 +64,10 @@
                 <div class="experience-card mb-4">
                     <h2 data-lang-en="RFID-Based Door Security System" data-lang-tr="RFID Tabanlı Kapı Güvenlik Sistemi">RFID-Based Door Security System</h2>
                     <span class="duration">Sep 2024 - Jan 2025</span>
-                    <p data-lang-en="As part of my volunteer role within the IEEE Robotics and Automation Society (RAS) at UTAA, I led the development of an RFID-based door security system designed to enhance access control for our clubroom. The system is built using an Arduino Mega microcontroller and integrates RFID technology to allow secure, contactless entry for authorized members."
-                       data-lang-tr="IEEE Robotics and Automation Society (RAS) gönüllü rolüm kapsamında, kulüp odamız için erişim kontrolünü artırmak amacıyla RFID tabanlı bir kapı güvenlik sistemi geliştirilmesine liderlik ettim. Sistem, Arduino Mega mikrodenetleyici kullanılarak inşa edildi ve yetkili üyeler için güvenli, temassız giriş sağlamak üzere RFID teknolojisini entegre etti.">
-                        As part of my volunteer role within the IEEE Robotics and Automation Society (RAS) at UTAA, I led the development of an RFID-based door security system designed to enhance access control for our clubroom. The system is built using an Arduino Mega microcontroller and integrates RFID technology to allow secure, contactless entry for authorized members.
+                    <p data-lang-en="As part of my volunteer role within the IEEE Robotics and Automation Society (RAS) at UTAA, I led the development of an RFID-based door security system designed to enhance access control for our clubroom. The system is built using an Arduino Mega microcontroller and integrates RFID technology to allow secure, contactless entry for authorized members. This project not only improved the security of our society's facilities but also served as a hands-on learning experience in embedded systems, electronics, and team collaboration. It exemplifies the application of robotics and automation principles in a real-world context."
+                       data-lang-tr="IEEE Robotics and Automation Society (RAS) gönüllü rolüm kapsamında, kulüp odamız için erişim kontrolünü artırmak amacıyla RFID tabanlı bir kapı güvenlik sistemi geliştirilmesine liderlik ettim. Sistem, Arduino Mega mikrodenetleyici kullanılarak inşa edildi ve yetkili üyeler için güvenli, temassız giriş sağlamak üzere RFID teknolojisini entegre etti. Bu proje, topluluğumuzun tesislerinin güvenliğini artırmakla kalmadı, aynı zamanda gömülü sistemler, elektronik ve ekip çalışması konularında uygulamalı bir öğrenme deneyimi sundu. Gerçek dünyada robotik ve otomasyon prensiplerinin uygulanmasına güzel bir örnek teşkil etti.">
                     </p>
+                    <h3 style="margin-top: 1.5rem; margin-bottom: 0.5rem; font-weight: 600; color: var(--primary-color);">Key Features</h3>
                     <ul>
                         <li>RFID Authentication, LCD feedback, user management</li>
                         <li>Expandable for network logging, keypad, biometrics</li>
@@ -95,9 +96,9 @@
                 <div class="footer-section">
                     <h4 data-lang-en="Connect" data-lang-tr="Bağlantı">Connect</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link"><i class="fas fa-envelope"></i></a>
+                        <a href="https://linkedin.com/in/gokberk-ceviker/" class="social-link" target="_blank" rel="noopener" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Mrcev" class="social-link" target="_blank" rel="noopener" title="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="mailto:gokberkceviker@ieee.org" class="social-link" title="E-mail"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
