blog postları denendi

--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,13 @@
             <h1 class="section-title" data-lang-en="Blog" data-lang-tr="Blog">Blog</h1>
             <div style="max-width:800px;margin:auto;">
                 <input id="blog-search" type="text" placeholder="Search blog..." style="width:100%;padding:0.75rem 1rem;margin-bottom:2rem;border-radius:0.5rem;border:1px solid #e9ecef;">
-                <div class="blog-posts-dynamic"></div>
+                <div class="blog-posts-dynamic">
+                    <div class="blog-post">
+                        <h2>Proxmox VE Kurulum ve Yönetim</h2>
+                        <p>Proxmox.pdf dosyasını online görüntüleyici ile inceleyin.</p>
+                        <a href="blog-post-proxmox.html">Devamını Oku</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
