--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Gökberk Çeviker - Jr. System Administrator at Tetra HGS, IEEE UTAA Vice Chair, Computer Engineering student specializing in system administration and innovative solutions.">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="assets/favicon-48x48.png">
     
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
