--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="/">GC</a>
+                <a href="/">Gokberk Ceviker</a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="/" class="nav-link" data-lang-en="Home" data-lang-tr="Ana Sayfa">Home</a></li>
