--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="/">GC</a>
+                <a href="/">Gokberk Ceviker</a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
