bloglardaki # li sistemei id li sisteme taşıma

--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
                     <div class="blog-post">
                         <h2>Proxmox VE Kurulum ve Yönetim</h2>
                         <p>Proxmox.pdf dosyasını online görüntüleyici ile inceleyin.</p>
-                        <a href="blog-post-proxmox.html">Devamını Oku</a>
+                        <a href="blog-post.html?id=3">Devamını Oku</a>
                     </div>
                 </div>
             </div>
