Add MC link to navigation menu

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <li class="nav-item">
                     <a href="/contact" class="nav-link" data-lang-en="Contact" data-lang-tr="İletişim">Contact</a>
                 </li>
+                 <li class="nav-item">
+                    <a href="mc.gokberkceviker.com.tr" class="nav-link" data-lang-en="Contact" data-lang-tr="İletişim">MC</a>
+                </li>
             </ul>
             <div class="nav-actions">
                 <button class="language-toggle" onclick="toggleLanguage()">
