Update MC link to use HTTPS

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="/contact" class="nav-link" data-lang-en="Contact" data-lang-tr="İletişim">Contact</a>
                 </li>
                  <li class="nav-item">
-                    <a href="mc.gokberkceviker.com.tr" class="nav-link" data-lang-en="Contact" data-lang-tr="İletişim">MC</a>
+                    <a href="https://mc.gokberkceviker.com.tr" class="nav-link" data-lang-en="MC" data-lang-tr="İletişim">MC</a>
                 </li>
             </ul>
             <div class="nav-actions">
