--- a/experience.html
+++ b/experience.html
@@ -29,6 +29,7 @@
                 <li class="nav-item"><a href="/projects" class="nav-link" data-lang-en="Projects" data-lang-tr="Projeler">Projects</a></li>
                 <li class="nav-item"><a href="/blog" class="nav-link" data-lang-en="Blog" data-lang-tr="Blog">Blog</a></li>
                 <li class="nav-item"><a href="/contact" class="nav-link" data-lang-en="Contact" data-lang-tr="İletişim">Contact</a></li>
+                <li class="nav-item"><a href="https://mc.gokberkceviker.com.tr" class="nav-link" target="_blank" rel="noopener">MC</a></li>
             </ul>
             <div class="nav-actions">
                 <button class="language-toggle" onclick="toggleLanguage()">
