--- a/about.html
+++ b/about.html
@@ -116,5 +116,6 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
+	<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html> 
